Fix toolbar spacings

--- a/client/app/styles/_message-list.styl
+++ b/client/app/styles/_message-list.styl
@@ -38,7 +38,7 @@
         display flex
 
     .filters
-        margin-right 1em
+        margin-right .5em
 
         i
             padding-left .5em
@@ -97,6 +97,9 @@
         i
             color basecolor
 
+        > button
+            border-right 1px solid rgba(0, 0, 0, 0.15)
+
     [role=group]
             color basecolor
 
@@ -111,6 +114,7 @@
 
             &:hover
                 background-color actioncolor
+
 
     .filters
         [role=menuitem]
